# foxglove-sdk

./: .clang-format  .flake8  .gitattributes  .gitignore  .pr-diff.txt  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Container.mk  Dockerfile  Dockerfile.ros  Dockerfile.tmp  Makefile  NAVIGATION_STRUCTURE.md  PR_MESSAGE.md  README.md  claude-notes.md  docker-compose.netem-egress.yml  docker-compose.netem-livekit.yml  docker-compose.netem-perlink.yml  docker-compose.netem-relay.yml  docker-compose.netem.yml  docker-compose.yaml  eslint.config.mjs  eslint.config.ts  foo  jest.config.json  package.json  pr-869-rust-clippy-fix.patch  pr-review-fix-proposal.md  pyproject.toml  test_docs_links.py  tsconfig.json
c/: Cargo.toml  README.md  build.rs  cbindgen.prelude.toml  cbindgen.toml
c/include/foxglove-c/: foxglove-c.h
c/ra/: Cargo.toml
c/src/: arena.rs  bytes.rs  channel.rs  channel_descriptor.rs  cloud_sink.rs  connection_graph.rs  fetch_asset.rs  gateway.rs  generated_types.rs  lib.rs  logging.rs  parameter.rs  parameter_handler.rs  playback_state.rs  raw_buf.rs  schemas.rs  server.rs  service.rs  sink_channel_filter.rs  system_info.rs  tests.rs  util.rs
c/src/parameter/: tests.rs
cpp/: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  examples.html  genindex.html  index.html  objects.inv  sanitize-ignorelist.txt  search.html  searchindex.js  test_callbacks  test_callbacks.cpp
cpp/cmake/: Findasio.cmake  compiler_options.cmake  foxglove-sdk-dist-config.cmake  foxglove-sdkConfig.cmake.in  foxglove-sources.cmake
cpp/examples/: CMakeLists.txt
cpp/examples/custom-protobuf/: CMakeLists.txt  README.md  main.cpp
cpp/examples/data-provider/: test.sh
cpp/examples/oak-camera-streaming/: README.md
cpp/examples/rgb-camera-visualization/: README.md  main.cpp
cpp/examples/tl-expected/: CMakelists.txt
cpp/examples/ws-server/: CMakeLists.txt  Dockerfile  README.md
cpp/foxglove/: CMakeLists.txt
cpp/foxglove-data-loader/: .gitattributes  README.md  package.json
cpp/foxglove-data-loader/cpp/: Makefile  component.cpp
cpp/foxglove-data-loader/src/: index.ts
cpp/foxglove/docs/: conf.py  index.rst  pyproject.toml  version.py
cpp/foxglove/src/: callback_forwarders.cpp  callback_forwarders.hpp  channel.cpp  cloud_sink.cpp  context.cpp  error.cpp  foxglove.cpp  mcap.cpp  messages.cpp  parameter.cpp  parameter_handler.cpp  remote_access.cpp  schema_traits.hpp  schemas.cpp  server.cpp  system_info.cpp  websocket.cpp
cpp/foxglove/tests/: test_arena.cpp  test_channel.cpp  test_mcap.cpp  test_messages.cpp  test_parameter.cpp  test_schemas.cpp  test_server.cpp  test_system_info.cpp  test_websocket.cpp
cpp/foxglove_data_loader/: Makefile  README.md
cpp/foxglove_data_loader/examples/: data_loader.cpp
cpp/tests/: CMakeLists.txt  test_mcap.cpp
python/foxglove-schemas-flatbuffer/: pyproject.toml
python/foxglove-schemas-protobuf/: pyproject.toml
python/foxglove-sdk/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  conftest.py  custom_build.py  mcap_with_multiple_layout.py  minimal.ipynb  package.json  pyproject.toml  tsconfig.json
python/foxglove-sdk-examples/custom-protobuf/: Makefile  fruit.proto  fruit_pb2.py  fruit_pb2.pyi  main.py  pyproject.toml
python/foxglove-sdk-examples/generate-fisheye-rectification-demo/: README.md  main.py  pyproject.toml
python/foxglove-sdk-examples/oak-camera-streaming/: README.md  main.py  pyproject.toml  test_fg_pub.py
python/foxglove-sdk-examples/oak-luxonis-4d/: README.md  config.json  main.py  pyproject.toml  rgbd_stream.py
python/foxglove-sdk-examples/python-logging/: README.md  main.py  pyproject.toml
python/foxglove-sdk-examples/ray-datasource/: README.md  main.py  pyproject.toml
python/foxglove-sdk-examples/rebot-arm-demo/: README.md  main.py  pyproject.toml
python/foxglove-sdk-examples/rebotarm-demo/: README.md  main.py  oak_streamer.py  pyproject.toml
python/foxglove-sdk-examples/rgb-camera-visualization/: README.md  main.py  pyproject.toml
python/foxglove-sdk-examples/so100-visualization/: README.md  main.py  pyproject.toml  requirements.txt  roscon_demo.py  run.sh
python/foxglove-sdk/examples/: marimo_robot_joints.py
python/foxglove-sdk/notebook-frontend/: package.json  tsconfig.json  widget.ts
python/foxglove-sdk/src/: agent.rs  cloud_sink.rs  lib.rs  logging.rs  mcap.rs  remote_access.rs  remote_common.rs  schemas_wkt.rs  sink_channel_filter.rs  system_info.rs  websocket.rs
python/foxglove-sdk/ts/: widget.ts
python/notebook/: .gitignore  README.md  package.json  pyproject.toml  tsconfig.json
python/notebook/ts/: widget.ts
ros/ros1_spike/: CMakeLists.txt  Dockerfile  Dockerfile.noetic  README.md  entrypoint.sh
ros/ros1_spike/src/: main.cpp
rust/data_provider_conformance/: Cargo.toml
rust/data_provider_conformance/src/: lib.rs  main.rs
rust/foxglove-derive/: Cargo.toml  README.md
rust/foxglove-derive/src/: lib.rs
rust/foxglove-derive/tests/: enum_fields_test.rs  scalar_fields_test.rs  string_fields_test.rs  struct_fields_test.rs
rust/foxglove-ws-protocol/: Cargo.toml
rust/foxglove-ws-protocol/src/: client.rs  lib.rs  message.rs  parse_error.rs  schema.rs  server.rs  tungstenite.rs
rust/foxglove_data_loader/: Cargo.toml  README.md
rust/foxglove_data_loader/examples/: ndjson.rs
rust/foxglove_data_loader/src/: lib.rs  tests.rs
rust/foxglove_data_loader/wit/: loader.wit
rust/foxglove_remote_data_loader_upstream/: Cargo.toml
rust/foxglove_remote_data_loader_upstream/examples/: csv_loader.rs  demo.rs  demo_blocking.rs
rust/foxglove_remote_data_loader_upstream/src/: blocking.rs  lib.rs  manifest.rs  serve_async.rs  serve_blocking.rs  stream.rs
rust/img2yuv/: Cargo.toml
rust/img2yuv/src/: compressed.rs  lib.rs  message.rs  raw.rs  ros1.rs  ros2.rs  tests.rs
rust/img2yuv/testdata/: test.bayer8-bggr.pad.raw  test.bayer8-bggr.raw  test.bayer8-gbrg.pad.raw  test.bayer8-gbrg.raw  test.bayer8-grbg.pad.raw  test.bayer8-grbg.raw  test.bayer8-rggb.pad.raw  test.bayer8-rggb.raw  test.bgr8.pad.raw  test.bgr8.raw  (+20 more)
(+1431 files in other folders)
