[package]
name = "foxglove_c"
version = "0.6.2"
edition = "2021"
publish = false

[lib]
name = "foxglove"
crate-type = ["staticlib", "cdylib"]

[lints]
workspace = true

[dependencies]
base64 = "0.22.1"
bitflags = "2.9.0"
foxglove = { path = "../rust/foxglove", features = ["unstable"] }
mcap.workspace = true
tracing.workspace = true

[build-dependencies]
cbindgen = "0.28.0"

[dev-dependencies]
maplit = "1.0.2"
