[package]
name = "foxglove_c"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "foxglove"
crate-type = ["staticlib", "cdylib"]

[lints]
workspace = true

[dependencies]
bitflags = "2.9.0"
foxglove = { path = "../rust/foxglove", features = ["unstable"] }
mcap.workspace = true
tracing.workspace = true

[build-dependencies]
cbindgen = "0.28.0"
