# This crate produces a cdylib (`libfoxglove_ra`) that is a superset of the base SDK
# (`libfoxglove`) with remote access (LiveKit) support. It compiles the same source as
# ../Cargo.toml via the `path` key, but with the `remote_access` feature enabled.
#
# This exists as a separate crate because Cargo only allows one [lib] per crate, and we need
# a distinct output name and crate-type (cdylib only, no staticlib).
#
# When updating dependencies in ../Cargo.toml, check whether corresponding changes are needed here.

[package]
name = "foxglove_c_ra"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "foxglove_ra"
path = "../src/lib.rs"
crate-type = ["cdylib"]

# The `remote_access` feature gates `mod gateway` in the shared source (../src/lib.rs).
# It is always enabled here; the base crate (../) never enables it.
[features]
default = ["remote_access"]
remote_access = []

[lints]
workspace = true

[dependencies]
tracing.workspace = true
foxglove = { path = "../../rust/foxglove", default-features = false, features = [
  "lz4",
  "remote_access",
  "tls",
  "websocket",
  "zstd",
] }
base64 = "0.22.1"
bitflags = "2.9.0"
env_logger = "0.11.5"
log.workspace = true
mcap.workspace = true

[build-dependencies]
cbindgen = "0.29.0"

[dev-dependencies]
maplit = "1.0.2"
