[project]
name = "foxglove-schemas-flatbuffer"
version = "0.3.0"
description = "Precompiled flatbuffer schemas for Foxglove"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["flatbuffers (>=23.0)"]
dynamic = ["classifiers"]

[project.urls]
repository = "https://github.com/foxglove/foxglove-sdk"
documentation = "https://docs.foxglove.dev/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.4,<9"]

[tool.hatch.build.targets.sdist]
include = [
    "tests",
    "foxglove_schemas_flatbuffer/*.py",
    "foxglove_schemas_flatbuffer/*.bfbs",
]

[tool.hatch.build.targets.wheel]
include = [
    "foxglove_schemas_flatbuffer/*.py",
    "foxglove_schemas_flatbuffer/*.bfbs",
]

[tool.pytest.ini_options]
addopts = "-vv --color=yes"
log_cli = true
xfail_strict = true
