[project]
name = "foxglove-schemas-flatbuffer"
version = "0.3.0"
description = "Precompiled flatbuffer schemas for Foxglove"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["flatbuffers (>=23.0)"]

[project.urls]
repository = "https://github.com/foxglove/foxglove-sdk"
documentation = "https://docs.foxglove.dev/"

[dependency-groups]
dev = ["pytest>=8.3.4,<9"]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
source-include = ["tests/**"]

[tool.pytest.ini_options]
addopts = "-vv --color=yes"
log_cli = true
xfail_strict = true
