[project]
name = "foxglove-schemas-protobuf"
version = "0.3.0"
description = "Precompiled protocol buffer schemas for Foxglove"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["protobuf (>=3.20)"]
dynamic = ["classifiers"]

[project.urls]
repository = "https://github.com/foxglove/foxglove-sdk"
documentation = "https://docs.foxglove.dev/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "mypy-protobuf>=3.6.0,<4",
]

[tool.hatch.build.targets.sdist]
include = [
    "tests",
    "foxglove_schemas_protobuf/*.py",
    "foxglove_schemas_protobuf/*.pyi",
]

[tool.hatch.build.targets.wheel]
include = [
    "foxglove_schemas_protobuf/*.py",
    "foxglove_schemas_protobuf/*.pyi",
]

[tool.pytest.ini_options]
addopts = "-vv --color=yes"
log_cli = true
xfail_strict = true
