[package]
name = "foxglove-sdk-python"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "foxglove_py"
crate-type = ["cdylib"]

[features]
# pyo3/extension-module is required for wheel builds but breaks cargo test.
# It's configured in pyproject.toml for normal maturin builds. This bundled
# feature is used by CI wheel builds where --features replaces pyproject.toml.
remote_access_wheel = ["pyo3/extension-module", "remote_access"]
remote_access = ["foxglove/remote_access"]

[lints]
workspace = true

[dependencies]
base64 = "0.22.1"
bytes.workspace = true
log.workspace = true
prost-types = "0.13"
pyo3 = "0.25.1"
pyo3-log = "0.12.3"
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
foxglove = { path = "../../rust/foxglove", default-features = false, features = ["lz4", "zstd"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tokio.workspace = true
foxglove = { path = "../../rust/foxglove", default-features = false, features = [
  "lz4",
  "websocket",
  "zstd",
] }

[build-dependencies]
walkdir = "2.5.0"

[dev-dependencies]
maplit = "1.0.2"
