[package]
name = "foxglove-derive"
description = "Foxglove SDK derive macros"
version = "0.7.1"
edition = "2021"
rust-version = "1.83.0"
repository = "https://github.com/foxglove/foxglove-sdk"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
prost-types.workspace = true

[dev-dependencies]
bytes = "1.4"
foxglove = { path = "../foxglove" }
prost.workspace = true
prost-reflect = "0.14.7"
tracing.workspace = true
tracing-test = { workspace = true, features = ["no-env-filter"] }
