[package]
name = "foxglove_remote_data_loader_upstream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["async"]
async = []
blocking = []

[dependencies]
tokio.workspace = true
serde.workspace = true
chrono = { version = "0.4.42", features = ["serde"] }
axum = "0.8.8"
serde_with.workspace = true
serde-constant = "0.1.0"
url = { version = "2.5.8", features = ["serde"] }
thiserror.workspace = true
tracing.workspace = true
futures = "0.3"
foxglove = { path = "../foxglove", features = ["stream", "chrono"] }
bytes.workspace = true
parking_lot = "0.12.4"

[dev-dependencies]
tracing-subscriber = "0.3"
insta.workspace = true

[[example]]
name = "demo"
required-features = ["async"]

[[example]]
name = "demo_blocking"
required-features = ["blocking"]

[lints]
workspace = true
