[package]
name = "img2yuv"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bytes = { workspace = true, optional = true }
cdr = { version = "0.2.4", optional = true }
foxglove.workspace = true
image = { version = "0.25.9", default-features = false }
regex = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror.workspace = true
yuv = "0.8.9"

[dev-dependencies]
anyhow = "1.0.100"
assert_matches = "1.5.0"
hexdump = "0.1.2"
insta = "1.45.0"

[features]
default = ["png", "jpeg", "webp"]
jpeg = ["image/jpeg"]
png = ["image/png"]
ros1 = ["dep:bytes", "dep:regex"]
ros2 = ["dep:cdr", "dep:regex", "dep:serde"]
webp = ["image/webp"]
