[project]
name = "cpp-sdk-documentation"
version = "0.0.0"
description = "Documentation for the Foxglove C++ SDK"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = []

[dependency-groups]
dev = [
    "breathe>=4.36.0,<5",
    "exhale>=0.3.7,<0.4",
    "furo>=2024.8.6,<2025",
    "sphinx>=7.2.0,<8",
    "sphinxcontrib-jquery>=4.1.0,<5",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
