[project]
name = "custom-protobuf"
version = "0.0.0"
description = "Example of logging custom protobuf messages in Foxglove"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "foxglove-sdk>=0.4.0",
    "numpy>=2.0",
    "protobuf (>=6.30.2,<7.0.0)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1,<2"]

[tool.uv]
package = false
