[project]
name = "generate-fisheye-rectification-demo"
version = "0.0.0"
description = "Generate MCAP with fisheye camera data and calibration using the Foxglove Python SDK."
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["foxglove-sdk>=0.4.0", "mcap>=1.2", "imageio", "numpy", "opencv-python (>=4.11.0.86,<5.0.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1"
