[project]
name = "oak-camera-streaming"
version = "0.1.0"
description = "Stream Luxonis OAK raw video, point cloud, and IMU to Foxglove"
requires-python = ">=3.10"
dependencies = [
    "foxglove-sdk>=0.9.0",
    "depthai>=3.0.0",
    "numpy>=1.20.0",
    "opencv-python-headless>=4.8.0",
]

[dependency-groups]
dev = ["mypy>=1,<2"]

[tool.uv]
package = false
