[project]
name = "oak-luxonis-4d"
version = "0.1.0"
description = "Stream Luxonis OAK-4 (DepthAI v3) RGB, H.264, stereo depth, and IMU to Foxglove"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "foxglove-sdk>=0.4.0",
    "depthai>=3.0.0",
    "numpy>=2.0",
    "opencv-python-headless>=4.8.0",
]

[dependency-groups]
dev = ["mypy>=1,<2"]

[tool.uv]
package = false
