[project]
name = "rebot-arm-demo"
version = "0.1.0"
description = "Visualize a reBot Arm B601 live in Foxglove while it runs a demo motion"
requires-python = ">=3.10"
dependencies = [
    "foxglove-sdk>=0.9.0",
    "rebotarm-control-py",
    "numpy>=1.24",
    "scipy>=1.10",
    "yourdfpy",
]

[tool.uv.sources]
rebotarm-control-py = { path = "../../../../reBotArm_control_py", editable = true }

[dependency-groups]
dev = ["mypy>=1,<2"]

[tool.uv]
package = false
