[project]
name = "rebotarm-demo"
version = "0.1.0"
description = "reBot Arm B601 slow sinusoidal sway demo (POS_VEL mode) using reBotArm_control_py"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "rebotarm-control-py",
    "numpy>=1.24",
    "foxglove-sdk>=0.4.0",
    "yourdfpy",
    "scipy>=1.10",
    # OAK-4 RGBD point cloud streaming via oak_streamer.py. Importing this is
    # optional at runtime: if depthai is missing or no device is attached, the
    # streamer logs a warning and disables itself; the rest of the demo runs.
    "depthai>=3.0.0",
]

[tool.uv.sources]
rebotarm-control-py = { path = "../../../../reBotArm_control_py", editable = true }

[dependency-groups]
dev = ["mypy>=1,<2"]

[tool.uv]
package = false
