[project]
name = "rgb-camera-visualization"
version = "0.1.0"
description = "RGB Camera visualization with Foxglove SDK"
requires-python = ">=3.9"
dependencies = [
    "foxglove-sdk>=0.9.0",
    "opencv-python>=4.5.0",
    "numpy>=1.20.0",
]

[project.scripts]
rgb-camera-visualization = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
