[project]
name = "so100-visualization"
version = "0.1.0"
description = "SO-100 robot arm visualization with Foxglove"
authors = [{ name = "Foxglove", email = "contact@foxglove.dev" }]
requires-python = "~=3.10"
dependencies = [
    "foxglove-sdk>=0.4.0,<0.5",
    "scipy~=1.0",
    "yourdfpy",
    "lerobot[feetech]",
    "av==15.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
